--- a/Pipfile
+++ b/Pipfile
@@ -4,13 +4,9 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-uvicorn = "*"
-fastapi = "*"
-sqlalchemy = "*"
-graphene = "*"
+graphene-sqlalchemy = "*"
 
 [dev-packages]
-pytest= "*"
 
 [requires]
 python_version = "3.8"
