--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
-frontend/src/API/* linguist-generated
-frontends/src/main.js linguist-generated
+frontend/src/API/* linguist-detectable=false
+frontends/src/main.js linguist-detectable=false
+frontends/src/index.html linguist-detectable=false
