--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,8 +3,8 @@
     "@dillonkearns/elm-graphql": "^4.2.0"
   },
   "dependencies": {
-    "elm-graphql": "^1.0.6",
-    "elm": "0.19.1"
+    "elm": "0.19.x",
+    "elm-graphql": "^1.0.6"
   },
   "scripts": {
     "build": "elm make src/Main.elm --optimize --output build/main.js"
