--- a/.github/workflows/build_frontend.yml
+++ b/.github/workflows/build_frontend.yml
@@ -6,11 +6,12 @@ jobs:
   build:
     runs-on: ubuntu-18.04
     steps:
+      - uses: actions/setup-python@v2
       - name : Checkout code
         uses: actions/checkout@v2
 
+
       - name: Set up Python
-        uses: actions/setup-python@v2
         with:
           python-version: 3.8
       - name: Install dependencies
