--- a/.github/workflows/build_frontend.yml
+++ b/.github/workflows/build_frontend.yml
@@ -6,15 +6,17 @@ jobs:
   build:
     runs-on: ubuntu-18.04
     steps:
-      - uses: actions/setup-python@v2
       - name : Checkout code
         uses: actions/checkout@v2
+      
+      - name: Setup elm
+        uses: actions/setup-python@v2
+
 
 
       - name: Set up Python
         with:
           python-version: 3.8
-      - name: Install dependencies
         working-directory: backend
         run: |
           python -m pip install --upgrade pip pipenv
