--- a/.github/workflows/build_frontend.yml
+++ b/.github/workflows/build_frontend.yml
@@ -8,7 +8,6 @@ jobs:
     steps:
       - name : Checkout code
         uses: actions/checkout@v2
-      
       - name: Setup python
         uses: actions/setup-python@v2
         with:
@@ -17,14 +16,10 @@ jobs:
         uses: jorelali/setup-elm@v3
         with:
           elm-version: 0.19.1
-
       - name: Intall Python dependencies
         working-directory: backend
         run: |
           python -m pip install --upgrade pip pipenv
           pipenv install
-
       - name : Build frontend
-        
-        run:
-          elm make src/Main.elm --output=build/main.js
+        run: ./scripts/build_frontend.sh
