--- a/.github/workflows/build_frontend.yml
+++ b/.github/workflows/build_frontend.yml
@@ -3,24 +3,32 @@ on:
   push:
   pull_request:
 jobs:
-  build:
+  build_backend:
     runs-on: ubuntu-18.04
     steps:
-      - name : Checkout code
+      - name: Checkout code
         uses: actions/checkout@v2
       - name: Setup python
         uses: actions/setup-python@v2
         with:
           python-version: 3.8
-      - name: Setup elm
-        uses: jorelali/setup-elm@v3
-        with:
-          elm-version: 0.19.1
       - name: Install pipenv
         working-directory: ./backend
         run: python -m pip install --upgrade pip pipenv
       - name: Intall Python dependencies
         working-directory: ./backend/
         run: pipenv install
-      - name : Build frontend
+      - name: Run backend tests
+        working-directory: ./backend
+        run: pytest tests
+  build_frontend:
+    runs-on: ubuntu-18.04
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Setup elm
+        uses: jorelali/setup-elm@v3
+        with:
+          elm-version: 0.19.1
+      - name: Build frontend and run tests
         run: ./scripts/build_frontend.sh
