--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,15 +5,14 @@ services:
       context: backend/
       dockerfile: "backend.dockerfile"
     ports:
-      - "8000:8000"
+      - "5000:5000"
     volumes:
       - ./backend:/usr/src/backend
-    # network_mode: "host"
-  db:
-    image: postgres:12
-    volumes:
-      - app-db-data:/var/lib/postgresql/data/pgdata
-    env_file:
-      - .env
-    environment:
-      - PGDATA=/var/lib/postgresql/data/pgdata
+  # db:
+    # image: postgres:13
+    # volumes:
+      # - ./.app-db-data:/var/lib/postgresql/data/pgdata
+    # env_file:
+      # - .env
+    # environment:
+      # - PGDATA=/var/lib/postgresql/data/pgdata
