--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -10,6 +10,7 @@ sqlalchemy = "*"
 graphene = "*"
 graphene-sqlalchemy = "*"
 alembic = "*"
+fastapi-sqlalchemy = "*"
 
 [dev-packages]
 pytest = "*"
