--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,24 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-graphene-sqlalchemy = "*"
+uvicorn = "*"
+fastapi = "*"
+tortoise-orm = "*"
+pydantic = "*"
+aerich = "*"
+asyncpg = "*"
+passlib = "*"
+python-multipart = "*"
+pyjwt = "*"
+aiofiles = "*"
+jinja2 = "*"
 
 [dev-packages]
+pytest = "*"
+sqlalchemy-stubs = "*"
+mypy = "*"
+black = "==20.8b1"
+python-dotenv = "*"
 
 [requires]
 python_version = "3.8"
