--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,29 @@
 version: "3.3"
 services:
+  db:
+    image: postgres:13
+    # volumes:
+      # - ./.app-db-data:/var/lib/postgresql/data/pgdata
+    env_file:
+      - .env
+    environment:
+      - PGDATA=/var/lib/postgresql/data/pgdata
+    ports:
+      - 5432:5432
   backend:
     build:
-      context : backend/
+      context: ./
       dockerfile: "backend.dockerfile"
     ports:
-      - "8000:8000"
-    # network_mode: "host"
+      - "5000:5000"
+    env_file:
+      - .env
+    volumes:
+      - ./:/usr/src/backend
+    environment:
+      - WAIT_HOSTS=db:5432
+      - WAIT_HOSTS_TIMEOUT=300
+      - WAIT_SLEEP_INTERVAL=2
+      - WAIT_HOST_CONNECT_TIMEOUT=5
+      - POSTGRES_SERVER=db
+  
