--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,9 @@
     "elm": "0.19.x"
   },
   "dependencies": {
-    "elm-graphql": "^1.0.6"
+    "elm-graphql": "^1.0.6",
+    "uglify-js": "^3.13.3",
+    "uglifyjs": "^2.4.11"
   },
   "scripts": {
     "build": "elm make src/Main.elm --optimize --output build/main.js"
