--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,10 @@ services:
     image: postgres:13
     # volumes:
       # - ./.app-db-data:/var/lib/postgresql/data/pgdata
-    env_file:
-      - .env
     environment:
       - PGDATA=/var/lib/postgresql/data/pgdata
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_USER=postgres
     ports:
       - 5432:5432
   backend:
@@ -16,8 +16,6 @@ services:
       dockerfile: "backend.dockerfile"
     ports:
       - "5000:5000"
-    env_file:
-      - .env
     volumes:
       - ./:/usr/src/backend
     environment:
@@ -25,5 +23,5 @@ services:
       - WAIT_HOSTS_TIMEOUT=300
       - WAIT_SLEEP_INTERVAL=2
       - WAIT_HOST_CONNECT_TIMEOUT=5
-      - POSTGRES_SERVER=db
-  
+      - DATABASE_URL=postgres://postgres:postgres@db:5432/postgres
+      - JWT_SECRET=somesecret
