--- a/.github/workflows/build_app.yml
+++ b/.github/workflows/build_app.yml
@@ -1,24 +1,9 @@
-name: Build and Deploy to Netlify
+name: Run tests
 on:
   push:
   pull_request:
 jobs:
-  build_backend:
-    runs-on: ubuntu-18.04
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Setup python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.8
-      - name: Install pipenv
-        run: python -m pip install --upgrade pip pipenv
-      - name: Intall Python dependencies
-        run: pipenv install
-      # - name: Run backend tests
-      # run: pytest tests
-  build_frontend:
+  test_backend:
     runs-on: ubuntu-18.04
     steps:
       - name: Checkout code
@@ -27,5 +12,18 @@ jobs:
         uses: jorelali/setup-elm@v3
         with:
           elm-version: 0.19.1
-      - name: Build frontend and run tests
+      - name: Build frontend
         run: ./scripts/build_frontend.sh
+      - name: Setup python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+      - name: Install pipenv
+        run: python -m pip install --upgrade pip pipenv
+      - name: Intall Python dependencies
+        run: pipenv install
+      - name: Build coverage file
+        run: |
+          pytest --cache-clear --cov=app > pytest-coverage.txt
+      - name: Comment coverage
+        uses: coroo/pytest-coverage-commentator@v1.0.2
