--- a/.github/workflows/build_app.yml
+++ b/.github/workflows/build_app.yml
@@ -14,6 +14,15 @@ jobs:
           elm-version: 0.19.1
       - name: Build frontend
         run: ./scripts/build_frontend.sh
+      - name: Auto Minify
+        uses: nizarmah/auto-minify@master
+        with:
+          directory: "static"
+      - name: Auto committing minified files
+        uses: stefanzweifel/git-auto-commit-action@v3.0.0
+        with:
+          commit_message: "Github Action: Auto Minified JS and CSS files"
+          branch: ${{ github.ref }}
       - name: Setup python
         uses: actions/setup-python@v2
         with:
