--- a/.github/workflows/build_app.yml
+++ b/.github/workflows/build_app.yml
@@ -33,6 +33,6 @@ jobs:
         run: pipenv install --dev
       - name: Build coverage file
         run: |
-          pytest --cache-clear --cov=app > pytest-coverage.txt
+          pipenv run pytest --cache-clear --cov=app > pytest-coverage.txt
       - name: Comment coverage
         uses: coroo/pytest-coverage-commentator@v1.0.2
