--- a/.github/workflows/build_app.yml
+++ b/.github/workflows/build_app.yml
@@ -34,6 +34,7 @@ jobs:
       - name: Install dependecies
         uses: VaultVulp/action-pipenv@v2.0.1
         with:
+          PYTHON_IMAGE_VERSION: 3.8
           command: install -d # Install all dependencies, including development ones
       - name: Build coverage file
 
