--- a/.github/workflows/build_app.yml
+++ b/.github/workflows/build_app.yml
@@ -23,25 +23,15 @@ jobs:
         with:
           commit_message: "Github Action: Auto Minified JS and CSS files"
           branch: ${{ github.ref }}
-      # - name: Setup python
-      #   uses: actions/setup-python@v2
-      #   with:
-      #     python-version: 3.8
-      # - name: Install pipenv
-      #   run: python -m pip install --upgrade pip pipenv
-      # - name: Intall Python dependencies
-      #   run: pipenv install --dev
-      - name: Install dependecies
-        uses: VaultVulp/action-pipenv@v2.0.1
+      - name: Setup python
+        uses: actions/setup-python@v2
         with:
-          PYTHON_IMAGE_VERSION: 3.8
-          command: install -d # Install all dependencies, including development ones
+          python-version: 3.8
+      - name: Install pipenv
+        run: python -m pip install --upgrade pip pipenv
       - name: Build coverage file
-
-        uses: VaultVulp/action-pipenv@v2.0.1
-        with:
-          command: run pytest --cache-clear --cov=app > pytest-coverage.txt # Run custom `test` command defined in the `[scripts]` block of Pipfile
-        # run: |
-        # pipenv run pytest --cache-clear --cov=app > pytest-coverage.txt
+        run: |
+          pipenv install --dev
+          pipenv run pytest --cache-clear --cov=app > pytest-coverage.txt
       - name: Comment coverage
         uses: coroo/pytest-coverage-commentator@v1.0.2
