Fix python install dev

--- a/.github/workflows/build_app.yml
+++ b/.github/workflows/build_app.yml
@@ -1,6 +1,5 @@
 name: Run tests
 on:
-  push:
   pull_request:
 jobs:
   test_backend:
@@ -32,6 +31,11 @@ jobs:
       - name: Build coverage file
         run: |
           pipenv install --dev
-          pipenv run pytest --cache-clear --cov=app > pytest-coverage.txt
-      - name: Comment coverage
-        uses: coroo/pytest-coverage-commentator@v1.0.2
+          pipenv run pytest --cache-clear --cov=app --cov-report xml
+
+      - uses: codecov/codecov-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
+          files: ./coverage.xml
+          flags: pytest # optional
+          verbose: true # optional (default = false)
