--- a/.github/workflows/build_app.yml
+++ b/.github/workflows/build_app.yml
@@ -1,6 +1,5 @@
 name: Run tests
 on:
-  push:
   pull_request:
 jobs:
   test_backend:
@@ -14,16 +13,29 @@ jobs:
           elm-version: 0.19.1
       - name: Build frontend
         run: ./scripts/build_frontend.sh
+      - name: Auto Minify
+        uses: nizarmah/auto-minify@master
+        with:
+          directory: "static"
+      - name: Auto committing minified files
+        uses: stefanzweifel/git-auto-commit-action@v3.0.0
+        with:
+          commit_message: "Github Action: Auto Minified JS and CSS files"
+          branch: ${{ github.ref }}
       - name: Setup python
         uses: actions/setup-python@v2
         with:
           python-version: 3.8
       - name: Install pipenv
         run: python -m pip install --upgrade pip pipenv
-      - name: Intall Python dependencies
-        run: pipenv install
       - name: Build coverage file
         run: |
-          pytest --cache-clear --cov=app > pytest-coverage.txt
-      - name: Comment coverage
-        uses: coroo/pytest-coverage-commentator@v1.0.2
+          pipenv install --dev
+          pipenv run pytest --cache-clear --cov=app --cov-report xml
+
+      - uses: codecov/codecov-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
+          files: ./coverage.xml
+          flags: pytest # optional
+          verbose: true # optional (default = false)
