--- a/Pipfile
+++ b/Pipfile
@@ -6,25 +6,32 @@ name = "pypi"
 [packages]
 uvicorn = "*"
 fastapi = "*"
-tortoise-orm = "*"
 pydantic = "*"
-aerich = "*"
-asyncpg = "*"
 passlib = "*"
-python-multipart = "*"
-PyJWT = "*"
 aiofiles = "*"
 Jinja2 = "*"
+SQLAlchemy = "*"
+alembic = "*"
+python-jose = "*"
+psycopg2 = "*"
+ormar = "*"
+fastapi-crudrouter = "*"
 
 [dev-packages]
 pytest = "*"
-sqlalchemy-stubs = "*"
 mypy = "*"
 black = "==20.8b1"
 python-dotenv = "*"
 asynctest = "*"
 pytest-cov = "*"
 requests = "*"
+sqlalchemy2-stubs = "==0.0.1a4"
 
 [requires]
 python_version = "3.8"
+
+[packages.databases]
+extras = [ "postgresql",]
+
+[packages.fastapi-users]
+extras = [ "ormar",]
