--- a/alembic.ini
+++ b/alembic.ini
@@ -2,8 +2,8 @@
 
 [alembic]
 # path to migration scripts
-script_location = alembic
-
+script_location = ./app/alembic
+version_locations = ./app/alembic/versions
 # template used to generate migration files
 # file_template = %%(rev)s_%%(slug)s
 
