--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: "3.3"
 services:
   db:
+    container_name: database
     image: postgres:13
     # volumes:
       # - ./.app-db-data:/var/lib/postgresql/data/pgdata
@@ -11,6 +12,7 @@ services:
     ports:
       - 5432:5432
   backend:
+    container_name: backend
     build:
       context: ./
       dockerfile: "backend.dockerfile"
