--- a/.github/workflows/test_backend.yml
+++ b/.github/workflows/test_backend.yml
@@ -14,7 +14,7 @@ jobs:
         run: docker-compose up -d
       - name: Build coverage file
         run: |
-          docker exec -ti backend pytest --cache-clear --cov=app --cov-report xml
+          docker exec backend pytest --cache-clear --cov=app --cov-report xml
 
       - uses: codecov/codecov-action@v1
         with:
