--- a/.github/workflows/test_backend.yml
+++ b/.github/workflows/test_backend.yml
@@ -14,7 +14,11 @@ jobs:
         run: docker-compose up -d
       - name: Build coverage file
         run: |
-          docker exec backend pytest --cache-clear --cov=app --cov-report xml
+          docker exec backend pytest --cache-clear --cov=app --cov-report xml &
+          while kill -0 $! > /dev/null 2>&1; do
+            free -m
+            sleep <interval>
+          done
 
       - uses: codecov/codecov-action@v1
         with:
