--- a/.github/workflows/test_frontend.yml
+++ b/.github/workflows/test_frontend.yml
@@ -1,15 +1,15 @@
-# name: Run tests
-# on:
-#   pull_request:
-#   push:
-#     branches:
-#       - master
-# jobs:
-#   test_backend:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - name: Checkout code
-#         uses: actions/checkout@v2
+name: Run tests
+on:
+  pull_request:
+  push:
+    branches:
+      - master
+jobs:
+  test_frontend:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
 #       - name: Setup elm
 #         uses: jorelali/setup-elm@v3
 #         with:
