--- a/.github/workflows/test_backend.yml
+++ b/.github/workflows/test_backend.yml
@@ -10,14 +10,21 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: Build the stack and coverage file
+      - name: Build the stack
+        run: docker-compose up -d
+      - name: Setup python
+        uses: actions/setup-python@v2
+        with:
+          python-version: "3.8"
+      - name: Setup dependencies
         run: |
-          docker-compose up -d;
-          docker exec backend pytest --cache-clear --cov=app --cov-report xml
+          pip3 install pipenv
+          pipenv install --dev
+      - name: Build coverage file
+        run: pytest --cache-clear --cov=app --cov-report xml
 
       - uses: codecov/codecov-action@v1
         with:
-          token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
+          token: ${{ secrets.CODECOV_TOKEN }}
           files: ./coverage.xml
-          flags: pytest # optional
-          verbose: true # optional (default = false)
+          flags: pytest
