--- a/.github/workflows/test_frontend.yml
+++ b/.github/workflows/test_frontend.yml
@@ -10,6 +10,16 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
+      - name: Install node
+        uses: actions/setup-node@v1
+
+      - name: Install dependencies
+        run: |
+          cd frontend
+          npm install -g elm-test
+          elm-test
+
 #       - name: Setup elm
 #         uses: jorelali/setup-elm@v3
 #         with:
