--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,21 @@
 {
   "devDependencies": {
-    "elm-review": "^2.5.3"
+    "css-loader": "^5.2.6",
+    "elm-review": "^2.5.3",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.3.2",
+    "style-loader": "^3.0.0",
+    "webpack": "^5.41.1",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2"
+  },
+  "scripts": {
+    "dev": "webpack --mode development --config webpack.config.js",
+    "server": "webpack serve --host 0.0.0.0 --port 1234 --mode development",
+    "build": "webpack --mode production"
+  },
+  "dependencies": {
+    "bootstrap": "^5.0.2",
+    "elm-webpack-loader": "^8.0.0"
   }
 }
