--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
       - POSTGRES_DB=postgres
       - POSTGRES_SERVER=db
       - JWT_SECRET=somesecret
-      - CORS_ALLOWED_ORIGINS=http://localhost:1234
+      - FRONTEND_URL=http://localhost:1234
     user: 1000:1000
   frontend:
     build:
@@ -43,4 +43,4 @@ services:
     volumes:
       - ./frontend/:/usr/src/frontend
     environment:
-      - API_SERVER=http://localhost:5000
+      - URL=http://localhost:1234/
