--- a/.github/workflows/integration_workflow.yml
+++ b/.github/workflows/integration_workflow.yml
@@ -29,13 +29,12 @@ jobs:
           flags: pytest
   test_frontend:
     runs-on: ubuntu-latest
-    needs: test_backend
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      # - name: Build the stack
-      #   run: docker-compose up -d
+      - name: Build the stack
+        run: docker-compose up -d
 
       - name: Install node
         uses: actions/setup-node@v1
@@ -44,6 +43,7 @@ jobs:
         run: |
           cd frontend
           sh ./scripts/build.sh
+
       - name: Run frontend tests
         run: npx elm-test
   #       - name: Build frontend
