--- a/.github/workflows/integration_workflow.yml
+++ b/.github/workflows/integration_workflow.yml
@@ -42,6 +42,7 @@ jobs:
       - name: Install dependencies and build files
         run: |
           cd frontend
+          export API_PATH="http://localhost:5000"
           sh ./scripts/build.sh
 
       - name: Run frontend tests
@@ -59,7 +60,9 @@ jobs:
   #           branch: ${{ github.ref }}\
   deploy_backend:
     runs-on: ubuntu-latest
-    needs: test_frontend
+    needs:
+      - test_backend
+      - test_frontend
     steps:
       - uses: actions/checkout@v2
       - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
