--- a/.github/workflows/integration_workflow.yml
+++ b/.github/workflows/integration_workflow.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Install dependencies and build files
         run: |
           cd frontend
-          export API_URL="http://localhost:5000"
+          export API_URL="http://localhost:5000/openapi.json"
           sh ./scripts/build.sh
 
       - name: Run frontend tests
