--- a/.github/workflows/integration_workflow.yml
+++ b/.github/workflows/integration_workflow.yml
@@ -34,7 +34,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build the stack
-        run: docker-compose up
+        run: docker-compose up -d
 
       - name: Install node
         uses: actions/setup-node@v1
