--- a/.github/workflows/integration_workflow.yml
+++ b/.github/workflows/integration_workflow.yml
@@ -39,11 +39,9 @@ jobs:
       - name: Install node
         uses: actions/setup-node@v1
 
-      - name: Install dependencies and build files
+      - name: Install dependencies
         run: |
-          cd frontend
-          export API_URL="http://localhost:5000/openapi.json"
-          sh ./scripts/build.sh
+          npm install
 
       - name: Run frontend tests
         run: npx elm-test
