--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,9 @@
   "dependencies": {
     "@openapitools/openapi-generator-cli": "^2.3.6",
     "bootstrap": "^5.0.2",
+    "elm": "^0.19.1-5",
     "elm-spa": "^6.0.4",
+    "elm-test": "^0.19.1-revision7",
     "elm-webpack-loader": "^8.0.0"
   }
 }
