--- a/netlify.toml
+++ b/netlify.toml
@@ -13,7 +13,7 @@
   publish = "dist"
 
   # Default build command.
-  command = "sed -i \"s|API_PATH_PLACEHOLDER|${API_URL}|g\" netlify.toml && sh ./scripts/build.sh"
+  command = "sed -i \"s|API_PATH_PLACEHOLDER|${API_URL}|g\" ../netlify.toml && sh ./scripts/build.sh"
 
 # Deploy Preview context: all deploys generated from a pull/merge request will
 # inherit these settings.
