--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
       - POSTGRES_DB=postgres
       - POSTGRES_SERVER=db
       - JWT_SECRET=somesecret
-    user: 1000:1000
+    user: ${UID}:${GID}
   frontend:
     build:
       context: frontend/
