--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,11 @@
     "elm-review": "^2.5.3",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
+    "i": "^0.3.6",
+    "sass": "^1.37.5",
+    "sass-loader": "^12.1.0",
     "style-loader": "^3.0.0",
+    "svg-url-loader": "^7.1.1",
     "webpack": "^5.41.1",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
@@ -14,6 +18,7 @@
     "server": "webpack serve --host 0.0.0.0 --port 1234 --mode development"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
     "@openapitools/openapi-generator-cli": "^2.3.6",
     "bootstrap": "^5.0.2",
     "elm": "^0.19.1-5",
