Forcing build on all commits

--- a/netlify.toml
+++ b/netlify.toml
@@ -11,7 +11,7 @@
   # root directory if a base has not been set. This sample publishes the
   # directory located at the absolute path "root/project/build-output"
   publish = "dist"
-
+  ignore = "/bin/false"
   # Default build command.
   command = "sed -i \"s|API_PATH_PLACEHOLDER|${API_URL}|g\" ../netlify.toml && sh ./scripts/build.sh"
 
