--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,5 +1,5 @@
 FROM node:16
-WORKDIR /usr/src/frontend/
+WORKDIR /usr/src/
 
 RUN apt-get update && \
     apt-get install -y default-jre
@@ -7,6 +7,9 @@ RUN apt-get update && \
 ENV WAIT_VERSION 2.7.2
 ADD https://github.com/ufoscout/docker-compose-wait/releases/download/$WAIT_VERSION/wait /wait
 RUN chmod +x /wait
-
-COPY ["package.json", "package-lock.json"]
+COPY "package.json" "package.json"
+COPY "package-lock.json" "package-lock.json"
+RUN npm install
+USER node
+WORKDIR /usr/src/frontend/
 CMD ["sh", "./scripts/start_docker.sh" ]
