--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,15 +11,15 @@
     "svg-url-loader": "^7.1.1",
     "webpack": "^5.41.1",
     "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^4.0.0"
   },
   "scripts": {
-    "dev": "webpack --mode development --config webpack.config.js",
+    "dev": "npx webpack --mode development --config webpack.config.js",
     "server": "webpack serve --host 0.0.0.0 --port 1234 --mode development"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
-    "@openapitools/openapi-generator-cli": "^2.3.6",
+    "@openapitools/openapi-generator-cli": "^2.3.10",
     "bootstrap": "^5.0.2",
     "elm": "^0.19.1-5",
     "elm-spa": "^6.0.4",
