Added REGON API

--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,10 @@ ormar = "*"
 asgi-lifespan = "*"
 pyjwt = "*"
 bcrypt = "*"
+zeep = "*"
+importlib-resources = "*"
+pydantic = {extras = [ "email",]}
+databases = {extras = [ "postgresql",]}
 
 [dev-packages]
 pytest = "*"
@@ -30,9 +34,3 @@ httpx = "*"
 
 [requires]
 python_version = "3.8"
-
-[packages.pydantic]
-extras = [ "email",]
-
-[packages.databases]
-extras = [ "postgresql",]
