--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@blueprintjs/core": "^3.50.4",
+    "@blueprintjs/popover2": "^0.12.4",
+    "@blueprintjs/select": "^3.18.6",
+    "@blueprintjs/table": "^3.9.8",
     "@date-io/core": "^1.3.13",
     "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.12.3",
@@ -18,19 +22,25 @@
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
     "@types/react-redux": "^7.1.18",
+    "@types/react-table": "^7.7.5",
     "axios": "^0.21.1",
     "formik": "^2.2.9",
     "http-proxy-middleware": "^0.19.1",
     "react": "^17.0.2",
     "react-admin": "^3.18.0",
     "react-dom": "^17.0.2",
+    "react-query": "^3.24.5",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-table": "^7.7.0",
     "recharts": "^2.1.2",
     "redux-query": "^3.4.2",
     "redux-query-interface-superagent": "^3.4.2",
     "redux-query-react": "^3.4.2",
+    "sass": "^1.42.1",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.4",
     "typescript": "^4.3.5",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.9"
@@ -63,5 +73,8 @@
     "@openapitools/openapi-generator-cli": "^2.3.10",
     "@types/react-router-dom": "^5.1.8",
     "prettier": "2.3.2"
+  },
+  "rules": {
+    "@typescript-eslint/switch-exhaustiveness-check": "warn"
   }
 }
