--- a/netlify.toml
+++ b/netlify.toml
@@ -10,7 +10,7 @@
   # the build. This is relative to the base directory if one has been set, or the
   # root directory if a base has not been set. This sample publishes the
   # directory located at the absolute path "root/project/build-output"
-  publish = "dist"
+  publish = "build"
   ignore = "/bin/false"
   # Default build command.
   command = "sed -i \"s|API_PATH_PLACEHOLDER|${API_URL}|g\" ../netlify.toml && yarn build "
