added pre-commits for python formatting

--- a/Pipfile
+++ b/Pipfile
@@ -19,6 +19,8 @@ bcrypt = "*"
 zeep = "*"
 importlib-resources = "*"
 xmltodict = "*"
+pydantic = {extras = [ "email",]}
+databases = {extras = [ "postgresql",]}
 
 [dev-packages]
 pytest = "*"
@@ -30,12 +32,8 @@ pytest-cov = "*"
 requests = "*"
 sqlalchemy2-stubs = "==0.0.1a4"
 httpx = "*"
+pre-commit = "*"
 
 [requires]
 python_version = "3.8"
 
-[packages.pydantic]
-extras = [ "email",]
-
-[packages.databases]
-extras = [ "postgresql",]
