--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,7 +32,7 @@
     "react-query": "^3.24.5",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "react-table": "^7.7.0",
     "recharts": "^2.1.2",
     "redux-query": "^3.4.2",
