--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "@types/react-table": "^7.7.5",
     "axios": "^0.21.1",
     "formik": "^2.2.9",
+    "formik-semantic-ui-react": "^2.0.0",
     "http-proxy-middleware": "^0.19.1",
     "react": "^17.0.2",
     "react-admin": "^3.18.0",
@@ -33,6 +34,7 @@
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "react-semantic-ui-datepickers": "^2.17.0",
     "react-table": "^7.7.0",
     "recharts": "^2.1.2",
     "redux-query": "^3.4.2",
@@ -43,7 +45,9 @@
     "semantic-ui-react": "^2.0.4",
     "typescript": "^4.3.5",
     "web-vitals": "^1.1.2",
-    "yup": "^0.32.9"
+    "yup": "^0.32.9",
+    "zod": "^3.13.4",
+    "zod-formik-adapter": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
