Dodawanie faktur sprzedaży - WIP Fixes #24

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -60,7 +60,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "update_db:dev": "npx dotenv -e .env.local  -- npx prisma db push"
   },
   "eslintConfig": {
     "extends": [
